samples/_failures_safe/1761551481_9a5873_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8b4eb141.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_8b4eb141.c:152:16: error: missing terminating " character
  152 |         printf("Token %zu
      |                ^~~~~~~~~~
./samples/SAFE/__tmp_8b4eb141.c:152:9: error: expected expression at end of input
  152 |         printf("Token %zu
      |         ^~~~~~
./samples/SAFE/__tmp_8b4eb141.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8b4eb141.c:152:9: error: expected declaration or statement at end of input
